# vkfft-rs

./: .gitignore  Cargo.toml
vkfft-rs/: Cargo.toml
vkfft-rs/src/: app.rs  config.rs  error.rs  lib.rs  version.rs
vkfft-src/: Cargo.toml  build.rs
vkfft-src/src/: bindings.rs  lib.rs
vkfft-src/wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
